Fixed boundary bugs. Fixed spacing inconsistencies. Fixed filter-related bug.

--- a/style.css
+++ b/style.css
@@ -60,6 +60,10 @@ svg {
     margin-top: 8px;
 }
 
+#individual-filter {
+    width: calc(100% - 12px);
+}
+
 #individual-select, #generations-up, #generations-down, #individual-filter {
     background-color: #202020;
     color: #aaa;
